experimental/ir/testdata/options/values/nested.proto.stderr.txt
error: expected singular message, found repeated `buf.test.Foo`
  --> testdata/options/values/nested.proto:11:14
   |
11 | option (x).b.a = {};
   |            - ^ field selector requires singular message
   |            |
   |            found repeated `buf.test.Foo`
...
29 |     optional Foo a = 1;
30 |     repeated Foo b = 2;
   |     ------------ type specified here

error: message field `buf.test.Foo.a` set multiple times
  --> testdata/options/values/nested.proto:14:8
   |
13 | option (x).a.a = {};
   |        ----- first set here...
14 | option (x).a = {};
   |        ^^^^^ ... also set here
15 | option (x).a.a.a = {};
...
29 |     optional Foo a = 1;
   |                  - not a repeated field
   |
   = note: a non-`repeated` option may be set at most once

error: message extension `buf.test.y` set multiple times
  --> testdata/options/values/nested.proto:18:8
   |
17 | option (x).(y).a = {};
   |        ------- first set here...
18 | option (x).(y) = {};
   |        ^^^^^^^ ... also set here
19 | option (x).(y).a.(y) = {};
...
39 |     optional Foo y = 1000;
   |                  - not a repeated field
   |
   = note: a non-`repeated` option may be set at most once

error: expected singular message, found repeated `buf.test.Foo`
  --> testdata/options/values/nested.proto:24:18
   |
24 | option (x).a.(z).a = {};
   |              --- ^ field selector requires singular message
   |              |
   |              found repeated `buf.test.Foo`
25 | option (x).a.(z) = {};
...
39 |     optional Foo y = 1000;
40 |     repeated Foo z = 1001;
   |     ------------ type specified here

encountered 4 errors
